plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '5.1.0'
}

group 'com.tronic'
version '1.0.0'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
    maven { url 'https://jitpack.io' }
    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation 'com.sedmelluq:lavaplayer:1.3.27'
    implementation 'com.toddway.shelf:shelf-jvm:2.0.4'
    implementation 'com.google.code.gson:gson:2.8.5'
    implementation 'net.dv8tion:JDA:4.0.0_63'
    implementation 'com.github.Jonbeckas:watcher.toolbox:1.1.1'
    implementation 'com.github.Jonbeckas:Updater:v1.1.0'
    implementation 'com.github.LowLevelSubmarine:ytma:v2.2.0'
    implementation 'com.github.mpkorstanje:simmetrics-core:4.1.1'
    implementation 'fr.bmartel:jspeedtest:1.32.1'
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.3.21'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.1'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.1'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.12.1'
    implementation 'gui.ava:html2image:2.0.1'
    implementation 'tech.tablesaw:tablesaw-core:0.36.0'
    implementation 'tech.tablesaw:tablesaw-html:0.36.0'


}
